Wed Jul 20 18:33:15 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* io.c (wsplit_p): patch for the environment where
	  fcntl(F_GETFL, O_NONBLOCK) is not supported. in that case,
	  set FMODE_WSPLIT without fcntl check. [ruby-dev:26566]

Wed Jul 20 18:07:11 2005  Tanaka Akira  <akr@m17n.org>

	* io.c (rb_io_ctl): update FMODE_WSPLIT_INITIALIZED and FMODE_WSPLIT
	  by F_SETFL.

Wed Jul 20 10:04:51 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_class_path): need to adjust snprintf() len for
	  teminating NUL.  [ruby-dev:26581]

Wed Jul 20 03:58:52 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/socket/socket.c: sorry, BeOS also uses HAVE_CLOSESOCKET,
	  so reverted.

	* ext/socket/extconf.rb: should not define HAVE_CLOSESOCKET
	  on windows.

Wed Jul 20 03:12:21 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/socket/socket.c: should not undef close() on win32.
	  it's defined to rb_w32_close(), otherwise handle leaks.
	  [ruby-Bugs-2131]

Wed Jul 20 00:48:16 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (syserr_initialize): don't use str before StringValue()
	  check.  [ruby-dev:26579]

Tue Jul 19 22:47:29 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (syserr_initialize): add 1 byte for snprintf() size for
	  NUL at the end.  [ruby-dev:26574]

Tue Jul 19 17:16:34 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* signal.c (trap): remove sigexit(); handle "EXIT" via sig_exec().
	  [ruby-dev:26440]

	* io.c (rb_io_inspect): replace sprintf() with "%s" format all
	  over the place by snprintf() to avoid integer overflow.

Tue Jul 19 14:10:50 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/tcltklib.c: rbtk_eventloop_depth is used as int.

	* ext/tk/tcltklib.c: rbtk_pending_exception is tested with
	  NIL_P, so should assign Qnil instead of 0 (Qfalse).

	* ext/tk/tcltklib.c (ip_invoke_real): fixed memory leak when
	  ip is deleted.
